tests/apigatewayv2/ctrl-apigwv2-01/01-global-kpc-cors-mandatory.yaml
apiVersion: aws.kropath.run/v1alpha1
kind: KropathConfig
metadata:
  name: baseline
  namespace: kro-system
spec:
  mandatory:
    apigatewayv2:
      corsEnabled: true
