tests/apigatewayv2/ctrl-apigwv2-01/02-apigwv2config.yaml
apiVersion: aws.kropath.run/v1alpha1
kind: ApiGatewayV2Config
metadata:
  name: my-api
  namespace: apigatewayv2
spec: {}
