tests/apigatewayv2/ctrl-apigwv2-01/04-global-apigwv2cfg-cors-mandatory.yaml
apiVersion: aws.kropath.run/v1alpha1
kind: ApiGatewayV2Config
metadata:
  name: my-api
  namespace: kro-system
spec:
  mandatory:
    corsEnabled: true
