tests/apigatewayv2/ctrl-apigwv2-01/06-local-apigwv2cfg-cors-defaults.yaml
apiVersion: aws.kropath.run/v1alpha1
kind: ApiGatewayV2Config
metadata:
  name: my-api
  namespace: apigatewayv2
spec:
  defaults:
    corsEnabled: true
