tests/apigatewayv2/ctrl-apigwv2-01/08-global-apigwv2cfg-cors-defaults.yaml
apiVersion: aws.kropath.run/v1alpha1
kind: ApiGatewayV2Config
metadata:
  name: my-api
  namespace: kro-system
spec:
  defaults:
    corsEnabled: true
