tests/apigatewayv2/ctrl-apigwv2-01/10-global-kpc-tags-mandatory.yaml
apiVersion: aws.kropath.run/v1alpha1
kind: KropathConfig
metadata:
  name: baseline
  namespace: kro-system
spec:
  mandatory:
    tags:
      env: production
      cost-centre: platform
