tests/apigatewayv2/ctrl-apigwv2-01/11-global-apigwv2cfg-tags-mandatory.yaml
apiVersion: aws.kropath.run/v1alpha1
kind: ApiGatewayV2Config
metadata:
  name: my-api
  namespace: kro-system
spec:
  mandatory:
    tags:
      owner: apigw-team
