tests/apigatewayv2/ctrl-apigwv2-01/15-global-apigwv2cfg-rate-defaults.yaml
apiVersion: aws.kropath.run/v1alpha1
kind: ApiGatewayV2Config
metadata:
  name: my-api
  namespace: kro-system
spec:
  defaults:
    defaultThrottlingRateLimit: 500
