tests/apigatewayv2/ctrl-apigwv2-01/17-global-kpc-tls-mandatory.yaml
apiVersion: aws.kropath.run/v1alpha1
kind: KropathConfig
metadata:
  name: baseline
  namespace: kro-system
spec:
  mandatory:
    apigatewayv2:
      minimumTlsVersion: TLS_1_2
