tests/apigatewayv2/ctrl-apigwv2-01/05-assert-ac2.yaml
apiVersion: aws.kropath.run/v1alpha1
kind: ApiGatewayV2Config
metadata:
  name: my-api
  namespace: apigatewayv2
status:
  effectiveConfig:
    mandatory:
      corsEnabled: true
