tests/apigatewayv2/ctrl-apigwv2-01/07-assert-ac3.yaml
apiVersion: aws.kropath.run/v1alpha1
kind: ApiGatewayV2Config
metadata:
  name: my-api
  namespace: apigatewayv2
status:
  effectiveConfig:
    defaults:
      corsEnabled: true
