tests/apigatewayv2/ctrl-apigwv2-01/12-assert-ac5.yaml
apiVersion: aws.kropath.run/v1alpha1
kind: ApiGatewayV2Config
metadata:
  name: my-api
  namespace: apigatewayv2
status:
  effectiveConfig:
    mandatory:
      tags:
        env: production
        cost-centre: platform
        owner: apigw-team
