tests/apigatewayv2/ctrl-apigwv2-01/14-assert-ac6.yaml
apiVersion: aws.kropath.run/v1alpha1
kind: ApiGatewayV2Config
metadata:
  name: my-api
  namespace: apigatewayv2
status:
  effectiveConfig:
    mandatory:
      defaultThrottlingBurstLimit: 1000
