tests/apigatewayv2/ctrl-apigwv2-01/16-assert-ac7.yaml
apiVersion: aws.kropath.run/v1alpha1
kind: ApiGatewayV2Config
metadata:
  name: my-api
  namespace: apigatewayv2
status:
  effectiveConfig:
    defaults:
      defaultThrottlingRateLimit: 500
