tests/apigatewayv2/ctrl-apigwv2-01/18-assert-ac8.yaml
apiVersion: aws.kropath.run/v1alpha1
kind: ApiGatewayV2Config
metadata:
  name: my-api
  namespace: apigatewayv2
status:
  effectiveConfig:
    mandatory:
      minimumTlsVersion: TLS_1_2
